@@ -1,3 +1,8 @@
+2003-10-02  Martin Schaffner <maschaffner@gmx.ch>
+
+	* include/byteswap.h: added macros for coping with alignment
+	issues
+
 2003-10-02  Bradley Bell  <btb@icculus.org>
 
 	* arch/dos/bak/ipx.c, arch/dos/ipx.c: comments/whitespace
